--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <nav class="navbar navbar-expand-lg navbar-light  mt-2">
                             <div class=" col-lg-1  ">
                                 <div class="small-screen-toogler-container">
-                                    <a class="navbar-brandgo-text  navbar-logo-text mr-auto " href="#">Besnik</a>
+                                    <a class="navbar-brandgo-text  navbar-logo-text mr-auto " href="#">Med</a>
                                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                         aria-expanded="false" aria-label="Toggle navigation">
@@ -492,7 +492,7 @@
         <div class="container ">
             <div class="row ">
                 <div class="col-md-3  ">
-                    <p class="h5 font-weight-bold text-dark">Besnik</p>
+                    <p class="h5 font-weight-bold text-dark">Med</p>
                     <p class="tiny-text mt-3">we are giving our students the best services for building
                         their bright
                         furture.</p>
@@ -523,7 +523,7 @@
                 </div>
             </div>
         </div>
-        <div class="text-center">Copyright © 2023 Created By Anshul®.</div>
+        <div class="text-center">Copyright © 2025 Created By Mohamed®.</div>
     </footer>
 
 
